[bumpversion]
current_version = 0.1.0
commit = True
tag = False

[bumpversion:file:lyacosmo/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = lyacosmo
version = attr: lyacosmo.__version__
author = Andrei Cuceu
author_email = andreicuceu@gmail.com
description = Cosmology computations for Lyman-alpha forest analyses
long_description = file: README.md
license = GNU General Public License v3.0
project_urls = 
	Bug Reports=https://github.com/igmhub/lyacosmo/issues
	Source=https://github.com/igmhub/lyacosmo

[options]
python_requires = >=3.9
install_requires = file: requirements.txt

# [options.entry_points]
# console_scripts = 
# 	lyatools-run = lyatools.scripts.run:main

# [options.extras_require]
# dev = 
# 	pytest
# 	flake8
# 	bump2version
